# gogogo

./: .gitignore  CLAUDE.md  IMPROVEMENTS.md  INSTINCTS.md  PLAN.md  README.md  SENSEI.md  analyzeScoring.ts  debugGame.ts  debugPolicyScoring.ts  demoAgenticLoop.ts  deploy.js  index.html  iterativeTrainingDemo.ts  package-lock.json  package.json  playGame.js  playwright.config.ts  runSelfPlayTraining.ts  simpleDemo.js  testAI.js  tsconfig.app.json  tsconfig.app.tsbuildinfo  visualize.js  vite.config.ts  watchGame.js
blog/: README.md  (+5 more)
training/: .gitignore  ARCH.md  ARCH.mermaid  DATA_FLOW.mermaid  LOG.md  NEUROSYMBOLIC.md  README.md  SNAP.md  TRAIN.md  __init__.py  architecture.html  atari_go.py  atari_instinct_learner.py  benchmark.py  board.py  compare_mcts.py  compare_moves.py  compare_variants.py  config.py  create_summary.py  curriculum_train.py  download_ogs.py  evaluate.py  export_model.py  game_record.py  generate_before_after.py  generate_showcase_game.py  hybrid_mcts.py  instinct_benchmark.py  instinct_loss.py  instincts.py  introspect.py  learned_instinct_weights.json  learned_instinct_weights_v2.json  mcts.py  model.py  probe_network.py  pyproject.toml  self_play.py  selfplay.py  (+22 more)
training/benchmarks/: README.md
training/dashboard/: app.py  charts.py  generate_demo.py
training/tests/: test_mcts.py  test_sensei_instincts.py
training/training_plots/: metrics_20251201_010033.json  metrics_20251201_191221.json  metrics_20251201_192132.json  metrics_20251201_194956.json  metrics_20251201_195104.json  metrics_20251201_195213.json  metrics_20251201_195245.json  (+4 more)
(+128 files in other folders)
